--- a/awx/ui/static/js/setup-menu/setup-menu.block.less
+++ b/awx/ui/static/js/setup-menu/setup-menu.block.less
@@ -8,37 +8,5 @@
     flex-direction: row;
     justify-content: flex-start;
     flex-wrap: wrap;
-
-    @media screen and (min-width: 571px) {
-        margin-top: -2.8rem;
-    }
-
-    &-block {
-        display: flex;
-        flex-direction: column;
-        color: white;
-        flex: 1 0 30%;
-        margin: 2.8rem;
-        max-width: 24rem;
-        transition: background-color 0.25s ease-in-out;
-        background-color: white;
-        &:hover, &:focus, &:active {
-            color: black;
-        }
-    }
-
-    .SetupItem-description {
-        font-family: merriweather;
-        font-weight: lighter;
-        color: black;
-    }
-
-    @media screen and (max-width: 930px) {
-        flex-flow: nowrap column;
-        &-block {
-            width: 100%;
-            max-width: inherit;
-        }
-    }
-
+    margin-left: -1rem;
 }
